# serializer version: 1
# name: test_list_example
  dict({
    'exit_code': 0,
    'stderr': '',
    'stdout': '''
      scenarios/example.json
          example-97db95eb
  
    ''',
  })
# ---
# name: test_list_invalid_target
  dict({
    'exit_code': 1,
    'stderr': '''
      File at '[PWD]/test.json' is not a valid scenario: Input data was truncated.
  
    ''',
    'stdout': '',
  })
# ---
# name: test_list_invalid_target_skip_invalid
  dict({
    'exit_code': 0,
    'stderr': '',
    'stdout': '''
      [PROJECT_ROOT]/scenarios/example.json
          example-97db95eb
  
    ''',
  })
# ---
# name: test_list_no_sources
  dict({
    'exit_code': 0,
    'stderr': '',
    'stdout': '''
      example-97db95eb
      requires-package-only-prereleases-5829a64d
      requires-package-only-prereleases-in-range-12a9315d
      requires-package-prerelease-and-final-any-19abc200
      requires-package-prerelease-specified-only-final-available-2ad40ba1
      requires-package-prerelease-specified-only-prerelease-available-fa8a64e0
      requires-package-prerelease-specified-mixed-available-caf5dd1a
      requires-package-multiple-prereleases-kinds-08c2f99b
      requires-package-multiple-prereleases-numbers-4cf7acef
      requires-transitive-package-only-prereleases-fa02005e
      requires-transitive-package-only-prereleases-in-range-f859ef9f
      requires-transitive-package-only-prereleases-in-range-opt-in-4ca10c42
      requires-package-does-not-exist-57cd4136
      requires-exact-version-does-not-exist-eaa03067
      requires-greater-version-does-not-exist-6e8e01df
      requires-less-version-does-not-exist-e45cec3c
      transitive-requires-package-does-not-exist-aca2796a
      requires-direct-incompatible-versions-063ec9d3
      requires-transitive-incompatible-with-root-version-638350f3
      requires-transitive-incompatible-with-transitive-9b595175
      requires-python-version-does-not-exist-0825b69c
      requires-python-version-less-than-current-f9296b84
      requires-python-version-greater-than-current-a11d5394
      requires-python-version-greater-than-current-many-02dc550c
      requires-python-version-greater-than-current-backtrack-ef060cef
      requires-python-version-greater-than-current-excluded-1bde0c18
  
    ''',
  })
# ---
# name: test_list_no_target_finds_all_valid_scenarios
  dict({
    'exit_code': 0,
    'stderr': '',
    'stdout': '''
      scenarios/example.json
          example-97db95eb
      scenarios/prereleases.json
          requires-package-only-prereleases-5829a64d
          requires-package-only-prereleases-in-range-12a9315d
          requires-package-prerelease-and-final-any-19abc200
          requires-package-prerelease-specified-only-final-available-2ad40ba1
          requires-package-prerelease-specified-only-prerelease-available-fa8a64e0
          requires-package-prerelease-specified-mixed-available-caf5dd1a
          requires-package-multiple-prereleases-kinds-08c2f99b
          requires-package-multiple-prereleases-numbers-4cf7acef
          requires-transitive-package-only-prereleases-fa02005e
          requires-transitive-package-only-prereleases-in-range-f859ef9f
          requires-transitive-package-only-prereleases-in-range-opt-in-4ca10c42
      scenarios/requires-does-not-exist.json
          requires-package-does-not-exist-57cd4136
          requires-exact-version-does-not-exist-eaa03067
          requires-greater-version-does-not-exist-6e8e01df
          requires-less-version-does-not-exist-e45cec3c
          transitive-requires-package-does-not-exist-aca2796a
      scenarios/requires-incompatible-versions.json
          requires-direct-incompatible-versions-063ec9d3
          requires-transitive-incompatible-with-root-version-638350f3
          requires-transitive-incompatible-with-transitive-9b595175
      scenarios/requires-python.json
          requires-python-version-does-not-exist-0825b69c
          requires-python-version-less-than-current-f9296b84
          requires-python-version-greater-than-current-a11d5394
          requires-python-version-greater-than-current-many-02dc550c
          requires-python-version-greater-than-current-backtrack-ef060cef
          requires-python-version-greater-than-current-excluded-1bde0c18
  
    ''',
  })
# ---
# name: test_list_no_versions
  dict({
    'exit_code': 0,
    'stderr': '',
    'stdout': '''
      scenarios/example.json
          example
      scenarios/prereleases.json
          requires-package-only-prereleases
          requires-package-only-prereleases-in-range
          requires-package-prerelease-and-final-any
          requires-package-prerelease-specified-only-final-available
          requires-package-prerelease-specified-only-prerelease-available
          requires-package-prerelease-specified-mixed-available
          requires-package-multiple-prereleases-kinds
          requires-package-multiple-prereleases-numbers
          requires-transitive-package-only-prereleases
          requires-transitive-package-only-prereleases-in-range
          requires-transitive-package-only-prereleases-in-range-opt-in
      scenarios/requires-does-not-exist.json
          requires-package-does-not-exist
          requires-exact-version-does-not-exist
          requires-greater-version-does-not-exist
          requires-less-version-does-not-exist
          transitive-requires-package-does-not-exist
      scenarios/requires-incompatible-versions.json
          requires-direct-incompatible-versions
          requires-transitive-incompatible-with-root-version
          requires-transitive-incompatible-with-transitive
      scenarios/requires-python.json
          requires-python-version-does-not-exist
          requires-python-version-less-than-current
          requires-python-version-greater-than-current
          requires-python-version-greater-than-current-many
          requires-python-version-greater-than-current-backtrack
          requires-python-version-greater-than-current-excluded
  
    ''',
  })
# ---
# name: test_list_one_target_does_not_exist
  dict({
    'exit_code': 1,
    'stderr': '''
      File 'foo' not found.
  
    ''',
    'stdout': '',
  })
# ---
# name: test_list_target_does_not_exist
  dict({
    'exit_code': 1,
    'stderr': '''
      File 'foo' not found.
  
    ''',
    'stdout': '',
  })
# ---
